zoc/src/syntax_tree/parser/tests/snapshots/zoc__syntax_tree__parser__tests__ind__ind.snap
---
source: zoc/src/syntax_tree/parser/tests/ind.rs
expression: "&cst"
---
Ind(
    Ind {
        lparen: ByteIndex(
            1,
        ),
        type_: UniverseLiteral {
            level: 0,
            start: ByteIndex(
                8,
            ),
            erasable: false,
        },
        name: StringLiteral {
            value: "Nat",
            span: (
                ByteIndex(
                    14,
                ),
                ByteIndex(
                    19,
                ),
            ),
        },
        index_types_lparen: ByteIndex(
            36,
        ),
        index_types: Nil,
        index_types_rparen: ByteIndex(
            37,
        ),
        vcon_defs_lparen: ByteIndex(
            68,
        ),
        vcon_defs: Snoc(
            Snoc(
                Nil,
                VconDef {
                    lparen: ByteIndex(
                        74,
                    ),
                    param_types_lparen: ByteIndex(
                        75,
                    ),
                    param_types: Nil,
                    param_types_rparen: ByteIndex(
                        76,
                    ),
                    index_args_lparen: ByteIndex(
                        78,
                    ),
                    index_args: Nil,
                    index_args_rparen: ByteIndex(
                        79,
                    ),
                    rparen: ByteIndex(
                        80,
                    ),
                },
            ),
            VconDef {
                lparen: ByteIndex(
                    86,
                ),
                param_types_lparen: ByteIndex(
                    87,
                ),
                param_types: Snoc(
                    Nil,
                    Deb(
                        NumberLiteral {
                            value: 0,
                            span: (
                                ByteIndex(
                                    88,
                                ),
                                ByteIndex(
                                    89,
                                ),
                            ),
                        },
                    ),
                ),
                param_types_rparen: ByteIndex(
                    89,
                ),
                index_args_lparen: ByteIndex(
                    91,
                ),
                index_args: Nil,
                index_args_rparen: ByteIndex(
                    92,
                ),
                rparen: ByteIndex(
                    93,
                ),
            },
        ),
        vcon_defs_rparen: ByteIndex(
            95,
        ),
        rparen: ByteIndex(
            97,
        ),
    },
)
