zoc/src/syntax_tree/parser/tests/snapshots/zoc__syntax_tree__parser__tests__ind__ind_nonliteral_name.snap
---
source: zoc/src/syntax_tree/parser/tests/ind.rs
expression: "&err"
---
Some(
    Number(
        NumberLiteral {
            value: 2,
            span: (
                ByteIndex(
                    14,
                ),
                ByteIndex(
                    15,
                ),
            ),
        },
    ),
)
