zoc/src/syntax_tree/parser/tests/snapshots/zoc__syntax_tree__parser__tests__ind__ind_nonliteral_universe.snap
---
source: zoc/src/syntax_tree/parser/tests/ind.rs
expression: "&err"
---
Some(
    Number(
        NumberLiteral {
            value: 1,
            span: (
                ByteIndex(
                    8,
                ),
                ByteIndex(
                    9,
                ),
            ),
        },
    ),
)
